# pi-camera-stream

./: .env.example  .gitignore  README.md  build.sh  camera.py  gen_videos.sh  main.py  package.json  pyproject.toml  run-dev.sh  run.sh
public/: index.html
readme/: PiCamera.desktop  picamera.service  wpa_supplicant.conf-example
src/: App.vue  main.js
src/lib/: client.js
templates/: index.html
